--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,4 +40,5 @@ android {
 dependencies {
     api 'com.facebook.react:react-native:+'
     api 'com.google.android.gms:play-services:+'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
